Edit and release functions for nodes
